  * svwait: replace builtin echo with /bin/echo -n (for Darwin)
  * svctool: fixed users getting added multiple times to com.apple.loginwindow HiddenUsersList
  * installer new features, 1. uninstall option (-u, -i), 2. create devices, 3. create fifo
  * Makefile: Added uninstall target
  * Added comments in installer input files
  * svctool: remove indimail, indimail-mta users from HiddenUsersList for Darwin
  * Makefile: run instcheck to set permissions on make install.
  * indimail-mta: Makefile: replaced g++ with c++ for portability
  * indimail-mta, ucspi-tcp: fixed uninstall target
  * installer.c: fixed setting of symbolic links
  * qmail-local.c: fixed bug with loopcounter in qmail-local.c - initialized maxdeliveredto
  * svscan, supervise, svc, svstat, svok - use /run or /var/run on systems that support it
  * Makefile: added run_init.o object for svc, svstat, svok
  * Makefile: use conf-runfs to configure daemontools to use /run, /var/run
  * ucspi-tcp/ip6_fmt.c: Fixed bug - Erwin Hoffman
  * qlocal_upgrade.sh: migrate /service to libexecdir
  * svscan.c, qmailctl, svscan_rc - renamed svscan.pid to .svscan.pid
  * smtpd.c: auth functions made static
  * qmail-remote.c: digest_md5() renamed to qr_digest_md5() to avoid clash
  * removed functions duplicated in libqmail
  * added man page for docker-entrypoint
  * replaced absolute paths with relative path in services to make them work in any service directory
  * postinst: fixed overwriting of QMAILLOCAL, QMAILREMOTE by service creation for odmr portk
  * qmail-rspawn.c: fixed "Unable to run qmail-remote" when QMAILREMOTE variable was unset
  * svctool: fixed "Unable to run qmail-remote" when QMAILREMOTE variable wasn't set
  * svctool: use mkfifo -m to create qmail-logfifo with 666 perms
  * svctool: added default-authentication-plugin=mysql_native_password as a comment
  * qcount_dir.c: replaced alloc_re() with alloc()